# Server_Windows

./: .gitignore  run_alicevision.py  run_meshroom.py  run_meshroom_fail.py  run_meshroom_static.py  setup.mg
SerMult/: CMakeLists.txt  serMult.cpp  serMult_UNUPDATE.cpp
SerMult/build_old/: CMakeCache.txt  Makefile  ServerMult  cmake_install.cmake
SerMult/build_old/01_05_16/: Log_01_05_16.txt
SerMult/build_old/01_06_43/: Log_01_06_43.txt
SerMult/build_old/01_13_15/: Log_01_13_15.txt
SerMult/build_old/01_15_05/: Log_01_15_05.txt
SerMult/build_old/01_21_08/: Log_01_21_08.txt  PointsFilt.pcd  decMesh.vtk  mesh.vtk  model.stl  points.pcd  smoothedMesh.stl  smoothedMesh.vtk
SerMult/build_old/01_26_23/: Log_01_26_23.txt  PointsFilt.pcd  decMesh.vtk  mesh.vtk  model.stl  points.pcd  smoothedMesh.stl  smoothedMesh.vtk
SerMult/build_old/01_26_43/: Log_01_26_43.txt  PointsFilt.pcd  mesh.vtk  model.stl  points.pcd  smoothedMesh.stl  smoothedMesh.vtk
SerMult/build_old/01_31_30/: Log_01_31_30.txt  PointsFilt.pcd  decMesh.vtk  mesh.vtk  model.stl  points.pcd  smoothedMesh.stl  smoothedMesh.vtk
SerMult/build_old/01_41_00/: Log_01_41_00.txt  PointsFilt.pcd  mesh.vtk  model.stl  points.pcd  smoothedMesh.stl  smoothedMesh.vtk
SerMult/build_old/01_43_42/: Log_01_43_42.txt  PointsFilt.pcd  decMesh.vtk  mesh.vtk  model.stl  points.pcd  smoothedMesh.stl  smoothedMesh.vtk
SerMult/build_old/01_50_11/: Log_01_50_11.txt  PointsFilt.pcd  decMesh.vtk  mesh.vtk  model.stl  points.pcd  smoothedMesh.stl  smoothedMesh.vtk
SerMult/build_old/02_35_20/: Log_02_35_20.txt  decMesh.vtk  (+6 more)
(+270 files in other folders)
